# Parallel-Programming-S5

./: Lab5.cs  Lab_4.sln  Program.cs
Lab_8/: CMakeLists.txt  dsm.cpp  dsm.h  main.cpp
Special_Project/: .md  CMakeLists.txt  main.cpp  mpi.cpp
